shell-livewire.org (archived on 2017-06-06)
{
  "alexa_rank": 499096,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 7328,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.22,
  "homepage_snapshot_redirected_domain": "shell-livewire.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170416162924id_/http://www.shell-livewire.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170416162924id_/http%3A//shell-livewire.org",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "shell-livewire.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606020204id_/http%3A//www.shell-livewire.org/privacy",
  "policy_title": "Home - Privacy Policy",
  "policy_url": "shell-livewire.org/privacy",
  "sha1": "dfdee9bb85a59763baf273da22a058382fb84ac4",
  "simhash": 9353507002183713275,
  "simhash_updated": false,
  "site_hostname": "shell-livewire.org",
  "site_url": "http://shell-livewire.org",
  "smog": 15.34,
  "strict_updated": false,
  "timestamp": "20170606020204",
  "word_count": 1264,
  "year": 2017
}

--- a/s/sh/she/shell-livewire.org.html
+++ b/s/sh/she/shell-livewire.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shell-livewire.org privacy policy that was archived on 2016-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161213235008id_/http%3A//www.shell-livewire.org/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shell-livewire.org privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606020204id_/http%3A//www.shell-livewire.org/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html lang="en-gb"><head>
 <title>Home - Privacy Policy</title>
@@ -383,6 +383,110 @@ You can erase or block this information by changing the settings on your compute
 <div id="jFlowSlide1" style="position: relative; width: 99%; height: 85px; overflow: hidden;"><div id="widgetNewsSlides" style="position: relative; width: 2890px; height: 85px; overflow: hidden; margin-left: 0px;">
    <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
    <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/blog/From-Smoothies-to-Energy-Storage-Solutions/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/blog/From-Smoothies-to-Energy-Storage-Solutions/"><strong>From Smoothies to Energy Storage Solutions – Celebrating 35 Years of Young UK Innovators</strong></a>
+    <p>This year, Shell LiveWIRE celebrates 35 years of supporting bright, young, innovative businesses up and down the UK. </p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/news/may-2017-shortlist/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/news/may-2017-shortlist/"><strong>May 2017 Shell LiveWIRE Smarter Future Programme Shortlist Announced!</strong></a>
+    <p>These five young entrepreneurs have been shortlisted for the Shell LiveWIRE Smarter Future Programme for the month of May!</p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/blog/supporting-women-entrepreneurs/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1491211914.307LID0.jpg); background-position: center center;" title="Griselda Togobo (Forward Ladies)" alt="Griselda Togobo (Forward Ladies)">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/blog/supporting-women-entrepreneurs/"><strong>Supporting women entrepreneurs to drive innovation and diversity in the UK (Posted by Griselda Togobo)</strong></a>
+    <p>The STEM sector is one that is known to have a significant under representation of women. Although businesses are working to improve diversity across all sectors of business, gender numbers haven’t changed much since - and the situation is even direr when we talk about women starting businesses within the sector. </p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/news/april-2017-winner/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/news/april-2017-winner/"><strong>Sam Rogers Wins April's Shell LiveWIRE Smarter Future Award!</strong></a>
+    <p>Sam Rogers won April’s Shell LiveWIRE Smarter Future Award for his business, Braw Power.</p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/blog/the-sustainables-development-goals/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1488976081.091LID0.jpg); background-position: center center;" title="Solveiga Pakštaitė (Design By Sol)" alt="Solveiga Pakštaitė (Design By Sol)">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/blog/the-sustainables-development-goals/"><strong>The UN's Sustainable Development Goals are impossible to reach... without women, that is (Posted by Shell LiveWIRE winner, Solveiga Pakštaitė)</strong></a>
+    <p>In 2015, the United Nations launched the Sustainable Development Goals for the next 15 years. </p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/news/spotlight-on-bubblenut-wash/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/news/spotlight-on-bubblenut-wash/"><strong>Spotlight on March's Shell LiveWIRE Smarter Future Programme winner, Irina Fedorenko, co-founder of BubbleNut Wash</strong></a>
+    <p>Irina Fedorenko won March’s Shell LiveWIRE Smarter Future Award for her business, BubbleNut Wash.</p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/blog/millennial-entrepreneurs/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1485942453.785LID0.jpg); background-position: center center;" title="Spinder Dhaliwal " alt="Spinder Dhaliwal ">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/blog/millennial-entrepreneurs/"><strong>Millennial Entrepreneurs (Posted by Spinder Dhaliwal)</strong></a>
+    <p>Fast and furious, that’s the pace of enterprise for the young generation today. We are now seeing more and more young entrepreneurs appear in global Rich Lists and it’s worth noting the pace and direction of this movement and what sectors they are in.</p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
+    <a href="/news/irina-fedorenko-wins-marchs-shell-livewire-smarter-future-award/">
+
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
+	
+	</a>
+   </div></div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_details">
+    <a href="/news/irina-fedorenko-wins-marchs-shell-livewire-smarter-future-award/"><strong>Irina Fedorenko Wins March's Shell LiveWIRE Smarter Future Award!</strong></a>
+    <p>Irina Fedorenko won March’s Shell LiveWIRE Smarter Future Award for her business, BubbleNut Wash.</p>
+   </div></div>
+  </div></div>
+   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
+   <div class="jFlowSlideContainer"><div class="widget_panel_image">
     <a href="/blog/millennials-rise-to-the-challenge/">
 
 			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1479391183.536LID0.jpg); background-position: center center;" title="#makethefuture" alt="#makethefuture">
@@ -396,120 +500,15 @@ You can erase or block this information by changing the settings on your compute
   </div></div>
    <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
    <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/news/featured-business-of-the-month-december-2016/">
+    <a href="/news/spotlight-on-customem/">
 
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
+			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1491322270.939LID0.jpg); background-position: center center;" title="Henrik Hagemann (CustoMem)" alt="Henrik Hagemann (CustoMem)">
 	
 	</a>
    </div></div>
    <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/news/featured-business-of-the-month-december-2016/"><strong>GreenPad Enterprise is December's Featured Business of the Month</strong></a>
-    <p>Zak Ajia won a Shell LiveWIRE Smarter Future Award for his business GreenPad Enterprise, which he started after graduating, in December 2015. </p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/blog/funding-and-scaling-up-tips/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1479303179.694LID0.jpg); background-position: center center;" title="Michael Murray (NVP Energy)" alt="Michael Murray (NVP Energy)">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/blog/funding-and-scaling-up-tips/"><strong>Funding and Scaling-up Tips with NVP Energy (Posted by Michael Murray)</strong></a>
-    <p>Why do some companies succeed where others fail? Michael Murray, from NVP Energy, the Shell Springboard 2016 regional winner, talks about his entrepreneurial journey and gives his top-tips for new businesses.</p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/news/november-2016-shortlist/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/news/november-2016-shortlist/"><strong>November 2016 Shell LiveWIRE Smarter Future Programme Shortlist Announced!</strong></a>
-    <p>These five young entrepreneurs have been shortlisted for the Shell LiveWIRE Smarter Future Programme for the month of November!  
-</p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/blog/a-year-in-the-life-of-an-entrepreneur/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/images/layout/body/news_image.jpg); background-position: center center;" title="Default" alt="Default">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/blog/a-year-in-the-life-of-an-entrepreneur/"><strong>A Year in the Life of an Entrepreneur (Posted by Tom Robinson)</strong></a>
-    <p>Almost a year on from being crowned the 2015 Shell LiveWIRE Young Entrepreneur of the Year, Tom Robinson, Founder of Adaptavate, shares his experiences in starting-up a business.</p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/news/october-2016-winner/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/news/october-2016-winner/"><strong>Haidin Rashid Wins October's Shell LiveWIRE Smarter Future Award! </strong></a>
-    <p>Haidin Rashid won October’s Shell LiveWIRE Smarter Future Award for his business, Materialize.X. </p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/blog/a-new-approach-to-solving-food-waste/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1478617107.976LID0.jpg); background-position: center center;" title="FoodCloud co-founders" alt="FoodCloud co-founders">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/blog/a-new-approach-to-solving-food-waste/"><strong>Technology - a new approach to solving food waste (Posted by FoodCloud)</strong></a>
-    <p>FoodCloud was founded because the world needs a FoodCloud.</p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/news/spotlight-on-fresh-check/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1479222055.191LID0.jpg); background-position: center center;" title="Fresh Check Co-founders" alt="Fresh Check Co-founders">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/news/spotlight-on-fresh-check/"><strong>Spotlight on September's Shell LiveWIRE Smarter Future Programme winner, Alex Bond, co-founder of  Fresh Check</strong></a>
-    <p>Alex Bond won a Shell LiveWIRE Smarter Future Award in September 2016 for his business, Fresh Check.</p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/blog/can-aquaponic-urban-farming-bring-food-waste-to-a-halt/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/blog/can-aquaponic-urban-farming-bring-food-waste-to-a-halt/"><strong>Can aquaponic urban farming bring food waste to a halt? (Posted by GrowUp Urban Farms)</strong></a>
-    <p>Fish feces is full of nutrients – in particular, it’s high in ammonia, which is converted into nitrogen and is very useful for plants. From using fish feces as nutrients for our plants, to recirculating the water in our aquaponics system, we work on the principle that waste never truly gets ‘thrown away’. </p>
-   </div></div>
-  </div></div>
-   <div class="jFlowSlideContainer" style="position: relative; width: 289px; height: 85px; float: left; overflow: auto;"><div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_image">
-    <a href="/news/102-funding-opportunities/">
-
-			<img src="/images/layout/body/blank.gif" style="background-image: url(/store/1244802545.899LID0.jpg); background-position: center center;" title="Shell LiveWIRE Sparkle" alt="Shell LiveWIRE Sparkle">
-	
-	</a>
-   </div></div>
-   <div class="jFlowSlideContainer"><div class="widget_panel_details">
-    <a href="/news/102-funding-opportunities/"><strong>102 funding opportunities for your low-carbon idea</strong></a>
-    <p>Business in the low-carbon and sustainability sectors in particular face unique challenges and need funding partners that take this into account. That’s why this year, we launched the Access to Finance Navigator – an interactive, digital database to help small and medium-sized enterprises (SMEs) identify funding opportunities in the low-carbon, cleantech and sustainability sectors.</p>
+    <a href="/news/spotlight-on-customem/"><strong>Spotlight on February's Shell LiveWIRE Smarter Future Programme winner, Henrik Hagemann, co-founder of CustoMem</strong></a>
+    <p>Henrik Hagemann won February’s Shell LiveWIRE Smarter Future Award for his business, CustoMem.</p>
    </div></div>
   </div></div>
  </div></div>
@@ -705,12 +704,10 @@ $(document).ready(function(){
        <h5>Inspirational Quote</h5>
        <ul>
         <li>
-         <em>The Award has given us confidence, as well as giving our potential customers confidence, that what we offer is a good and reliable service.
-
-</em>
+         <em>Being in business and running your own venture, no matter how small, is a brilliant thing to do. Sure, there are moments where you want the ground to open up and swallow you as it seems to be going all wrong, but that moment when you can stand back with a smile and see the wonderful work you have done.</em>
          </li>
          <li>
-         Joe Page, Caribbean Coaching
+         Dave Scotford, Red Music Promotions
          </li>
         </ul>
        </li> -->
