--- a/k/kn/kno/knolix.com.html
+++ b/k/kn/kno/knolix.com.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the knolix.com privacy policy that was archived on 2016-11-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161116134554id_/http%3A//www.knolix.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the knolix.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606020342id_/http%3A//www.knolix.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<meta charset="utf-8">
 	<title>Knolix - Privacy</title>
+
 	<!-- for Facebook -->          
 	<meta property="og:title" content="Knolix - Privacy">
 	<meta property="og:type" content="article">
@@ -16,20 +17,17 @@
 	<meta name="twitter:description" content="Watch the money grow on Tree">
 	<meta name="twitter:image" content="http://www.knolix.com/img/fbtree.jpg">
 	
-	<meta name="propeller" content="2d77f481ddd0cec7abd569d948642746">
-	<meta name="trafficjunky-site-verification" content="2a79vpont">
-
 	<link rel="shortcut icon" href="/cdn/favicon.ico">
-	<link type="text/css" rel="stylesheet" href="//cdn.knolix.com/tpl2/style.css">
-	<link rel="stylesheet" href="//cdn.knolix.com/tpl2/vendor.min.css">
-	<link rel="stylesheet" type="text/css" href="//cdn.knolix.com/tpl2/slick.theme.css">
+	<link type="text/css" rel="stylesheet" href="//cdn.knolix.com/tpl1/style.css">
+	<link rel="stylesheet" href="//cdn.knolix.com/tpl1/vendor.min.css">
+	<link rel="stylesheet" type="text/css" href="//cdn.knolix.com/tpl1/slick.theme.css">
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css">
 	<base href="/">
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
       var global = {
-		 "speed":"0.00000010",
-		 "capacity":"0.00000600",
-         '_value': "0.00000600",
+		 "speed":"0.00000005",
+		 "capacity":"0.00000300",
+         '_value': "0.00000300",
          '_balance': "0.00000000",
          'is_authorized': false,
          'recaptcha_key': "",
@@ -67,10 +65,7 @@
 	<ul style="float:left;">
 		<li><span>Welcome !</span></li>
 		<li><a href="/"><span>Home</span></a></li>
-		<li><a href="/invest.php"><span>Cloud Mining</span></a></li>
-		<li><a href="/faucets.php"><span>Faucets</span></a></li>
-		<li><a href="/proof.php"><span>Payment Proof</span></a></li>
-		<li><span>Speed:&nbsp;0.00000010&nbsp;BTC/min</span></li>
+		<li><span>Speed:&nbsp;0.00000005&nbsp;BTC/min</span></li>
 	</ul>
 	<div class="right"></div>
 	<div style="clear:both; height:0px;"><!-- --></div>
@@ -81,22 +76,12 @@
 
 <div style="height:5px;"><!-- --></div>
 
-<center>
-<div id="news" style="width:600px;">
-  <ul>
-	  </ul>
-</div>
-</center>
-
-<div style="height:5px;"><!-- --></div>
-
 <div id="wrapper">
 	<div class="topLeft"><!-- --></div>
 	<div class="topRight"><!-- --></div>
 	<div style="clear:both; height:0px;"><!-- --></div>
 	<center>
-		<ins class="bmadblock-5672a8093112aa72053262be" style="display:inline-block;width:728px;height:90px;"></ins>
-<script async="" type="application/javascript" src="//ad.bitmedia.io/js/adbybm.js/5672a8093112aa72053262be"></script>		
+		<iframe scrolling="no" frameborder="0" src="//onead.space/view.php?r=56f1adefb9958&amp;s=728x90" style="overflow:hidden;width:728px;height:90px;"></iframe>		
 	</center>
 								
 	<div id="container">
@@ -119,12 +104,12 @@
 	<hr>
 <center>
 <div style="float: left;">
-<ins class="bmadblock-567ff9103112aa720533f88d" style="display:inline-block;width:160px;height:600px;"></ins>
-<script async="" type="application/javascript" src="//ad.bitmedia.io/js/adbybm.js/567ff9103112aa720533f88d"></script><br>
+<iframe scrolling="no" frameborder="0" src="//onead.space/view.php?r=56f1adefb9958&amp;s=160x600" style="overflow:hidden;width:160px;height:600px;"></iframe>
+<br>
 </div>
 <div style="float: right;">
-<ins class="bmadblock-567ff94c3112aa720533f8a0" style="display:inline-block;width:160px;height:600px;"></ins>
-<script async="" type="application/javascript" src="//ad.bitmedia.io/js/adbybm.js/567ff94c3112aa720533f8a0"></script><br>
+<iframe scrolling="no" frameborder="0" src="//onead.space/view.php?r=56f1adefb9958&amp;s=160x600" style="overflow:hidden;width:160px;height:600px;"></iframe>
+<br>
 </div>
 <div style="width:600px;border:2px solid black; margin: 10px">
 
@@ -242,8 +227,8 @@
 	<div style="width:940px;">
 
 
-<div style="float: left;"><div class="adbit-display-ad" data-adspace-id="2406DB7E3C"></div></div>
-<div style="float: right;"><div class="adbit-display-ad" data-adspace-id="14E65B8120"></div></div>
+<div style="float: left;"><iframe scrolling="no" frameborder="0" src="//onead.space/view.php?r=56f1adefb9958&amp;s=468x60" style="overflow:hidden;width:468px;height:60px;"></iframe></div>
+<div style="float: right;"><iframe scrolling="no" frameborder="0" src="//onead.space/view.php?r=56f1adefb9958&amp;s=468x60" style="overflow:hidden;width:468px;height:60px;"></iframe></div>
 
 </div>
 		
@@ -307,12 +292,7 @@ invite only
 
 <script src="//cdn.knolix.com/js/vendor.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js"></script>
-<script type="text/javascript" src="/cdn/js/vticker.js"></script>
-<script>
-$(function() {
-	$('#news').vTicker();
-});
-</script>	
+	
 <script src="//cdn.knolix.com/js/custom.js"></script>	
 <audio class="coins">
 <source src="//cdn.knolix.com/coins.ogg" type="audio/ogg">
@@ -323,7 +303,8 @@ $(function() {
 <source src="//cdn.knolix.com/full.mp3" type="audio/mp3">
 </audio>
 
-	<span id="at_570c26fa074ac"></span><script type="text/javascript" src="http://autto.net/bnr?r=570c26fa074ac"></script>
+<span id="at_56f1adefb9958"></span><script type="text/javascript" src="http://autto.net/bnr?r=56f1adefb9958"></script>
+
 
 
 </body></html>
