--- a/b/be/bes/best-game.co.html
+++ b/b/be/bes/best-game.co.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the best-game.co privacy policy that was archived on 2016-10-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161013115009id_/http%3A//best-game.co/about/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the best-game.co privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606020418id_/http%3A//best-game.co/about/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<title>Best-game.co - Free Online Games</title>
@@ -7,40 +7,31 @@
 	<meta name="keywords" content="best-game.co, games, play games, free online games">
 	<meta name="description" content="best-game.co, free online games">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="http://static.cdn-node.com/best-game.co/style/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="http://static.cdn-node.com/best-game.co/style/base.css">
-	<link rel="stylesheet" type="text/css" href="http://static.cdn-node.com/best-game.co/style/about.css">
+	<link rel="icon" type="image/x-icon" href="//static.cdn-node.com/best-game.co/style/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="//static.cdn-node.com/best-game.co/style/base.css">
+	<link rel="stylesheet" type="text/css" href="//static.cdn-node.com/best-game.co/style/about.css">
+
+	<!-- Google Tag Manager -->
+	<script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-TP2W94"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-TP2W94');</script>
+	<!-- End Google Tag Manager -->
 </head>
 
 <body>
-	
-	<!-- Google Tag Manager -->
-	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TP2W94"
+
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TP2W94"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-	<script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-TP2W94"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-TP2W94');</script>
-	<!-- End Google Tag Manager -->
-		
-	<div class="headerContainer">
-		<div class="logoRow">
+	<!-- End Google Tag Manager (noscript) -->
+	
+	<div class="headerContainer">		
+		<div class="cateRow">
 			<div class="logo">
 				<a href="/"></a>
 			</div>
-
-			<div class="headerAd">
-				<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-				<!-- Best-game.co - CateTop -->
-				<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-9296521721041872" data-ad-slot="8922095347"></ins>
-				<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-				</script>
-			</div>
-		</div>
-		
-		<div class="cateRow">
 			<div class="cateList">
 				<ul>
 					<li><a href="/cate/new.html">New</a></li>
@@ -92,7 +83,7 @@
 					<p>Best-game.co and third party vendors, including Google, may use first-party cookies (such as the Google Analytics cookies) and third party cookies (such as the DoubleClick cookie) together to inform, optimize and serve ads based on a user's past visits to Best-game.co, and/or (b) report how your ad impressions, other uses of ad services, and interactions with these ad impressions and ad services are related to visits to Best-game.co.</p>
 					<p>Data from Google Analytics Demographics and Interest Reporting may be utilized by Best-game.co to help recognize and understand user preferences, to make improvements to Best-game.co, to choose content and advertising to display to you, and for other business purposes that will allow Best-game.co to better serve you.</p>
 					<p class="sectionHeading">DoubleClick DART and Third-Party Vendors Cookies</p>
-					<p>We also may use DART and third-party vendors cookies for ad serving through Google's DoubleClick, which places a cookie on your computer when you are browsing the web and visit a site using DoubleClick advertising (including some Google AdSense advertisements). This cookie is used to serve ads specific to you and your interests ("interest based targeting"). The ads served will be targeted based on your previous browsing history (For example, if you have been viewing sites about visiting Las Vegas, you may see Las Vegas hotel advertisements when viewing a non-related site, such as on a site about hockey). DART cookies use "non personally identifiable information". It does NOT track personal information about you, such as your name, email address, physical address, telephone number, social security numbers, bank account numbers or credit card numbers. You can opt-out of this ad serving on all sites using this advertising by visiting http://www.networkadvertising.org/managing/opt_out.asp.</p>
+					<p>We also may use DART and third-party vendors cookies for ad serving through Google's DoubleClick, which places a cookie on your computer when you are browsing the web and visit a site using DoubleClick advertising (including some Google AdSense advertisements). This cookie is used to serve ads specific to you and your interests ("interest based targeting"). The ads served will be targeted based on your previous browsing history (For example, if you have been viewing sites about visiting Las Vegas, you may see Las Vegas hotel advertisements when viewing a non-related site, such as on a site about hockey). DART cookies use "non personally identifiable information". It does NOT track personal information about you, such as your name, email address, physical address, telephone number, social security numbers, bank account numbers or credit card numbers. You can opt-out of this ad serving on all sites using this advertising by visiting //www.networkadvertising.org/managing/opt_out.asp.</p>
 					<p>Third parties, like Google, may collect certain types of information about visits to the site, including interaction with content on these sites. As always, no personally identifiable information will be collected.</p>
 					<p class="sectionHeading">Children Under 13</p>
 					<p>Our site is not directed to children under the age of 13. We respect the privacy of parents and children and are committed to complying with the Children's Online Privacy Protection Act (COPPA). On those areas of the sites that ask for age, we do not collect personal information from individuals who identify themselves as under the age of 13 except in those limited circumstances where we believe that such collection is permitted under COPPA.</p>
