--- a/m/ma/mav/mavoo.net.html
+++ b/m/ma/mav/mavoo.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mavoo.net privacy policy that was archived on 2016-02-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160217005408id_/http%3A//mavoo.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mavoo.net privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606020425id_/http%3A//mavoo.net/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
@@ -33,7 +33,7 @@
             |
             <span class="aa0"><a href="http://mavoo.net/terms">Terms</a></span>
             |
-            <span class="aa0">mavoo.net © 2016</span>
+            <span class="aa0">mavoo.net © 2017</span>
             <span class="sp"></span>
         </div>
 
@@ -103,7 +103,7 @@
         <p>This Privacy Policy does not create rights enforceable by third parties or require disclosure of any personal information relating to users of the website.</p>
 
         <p class="strong">Whom can you ask if you have privacy-related questions?</p>
-        <p>Questions regarding this Privacy Policy should be directed here - <a href="mailto:privacy@LinkFeed.net">privacy@LinkFeed.net</a></p>
+        <p>Questions regarding this Privacy Policy should be directed here - <a href="mailto:privacy@LinkFeed.org">privacy@LinkFeed.org</a></p>
 
         <p>END OF DOCUMENT</p>
         <p>© 2012 LinkFeed LLC.. All rights reserved.</p>
