springfieldspringfield.co.uk (archived on 2017-06-06)
{
  "alexa_rank": 24952,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 1689,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "springfieldspringfield.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170329150502id_/http://www.springfieldspringfield.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170329150502id_/http%3A//springfieldspringfield.co.uk",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "springfieldspringfield.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606020526id_/http%3A//www.springfieldspringfield.co.uk/privacy.php",
  "policy_title": "Privacy Policy | Springfield! Springfield!",
  "policy_url": "springfieldspringfield.co.uk/privacy.php",
  "sha1": "9eaa843c9f6ed2293d5f5b493ea629f2b3cfdcd2",
  "simhash": 10022743857333896273,
  "simhash_updated": true,
  "site_hostname": "springfieldspringfield.co.uk",
  "site_url": "http://springfieldspringfield.co.uk",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20170606020526",
  "word_count": 262,
  "year": 2017
}

--- a/s/sp/spr/springfieldspringfield.co.uk.html
+++ b/s/sp/spr/springfieldspringfield.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the springfieldspringfield.co.uk privacy policy that was archived on 2016-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161227191648id_/http%3A//www.springfieldspringfield.co.uk/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the springfieldspringfield.co.uk privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606020526id_/http%3A//www.springfieldspringfield.co.uk/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
@@ -49,6 +49,33 @@
         enable_page_level_ads: true
     });
 </script>
+
+    <script>
+
+        function addLink() {
+            //Get the selected text and append the extra info
+            var selection = window.getSelection(),
+                pagelink = '<br><br>Read more: ' + document.location.href,
+                copytext = selection + pagelink,
+                newdiv = document.createElement('pre');
+
+            //hide the newly created container
+            newdiv.style.position = 'absolute';
+            newdiv.style.left = '-99999px';
+
+            //insert the container, fill it with the extended text, and define the new selection
+            document.body.appendChild(newdiv);
+            newdiv.innerHTML = copytext;
+            selection.selectAllChildren(newdiv);
+
+            window.setTimeout(function () {
+                document.body.removeChild(newdiv);
+            }, 100);
+        }
+
+        document.addEventListener('copy', addLink);
+
+    </script>
 
 
 
@@ -254,6 +281,10 @@
 
 
         
+        <div id="aditize34" class="aditize-widget"></div>
+        <script src="http://aditize.com/js/widget_api.js"></script>
+        <script>aditize.widget(34);</script>
+
     </div>
 
 </div>
@@ -369,15 +400,6 @@
 
 
 </script>
-
-<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-<script type="text/javascript">
-    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"http://www.springfieldspringfield.co.uk/privacy.php","theme":"light-bottom"};
-</script>
-
-<script type="text/javascript" src="//s3.amazonaws.com/cc.silktide.com/cookieconsent.latest.min.js"></script>
-<!-- End Cookie Consent plugin -->
-
 
 
 </body></html>
