--- a/l/lo/loc/localbooty.com.html
+++ b/l/lo/loc/localbooty.com.html
@@ -1,23 +1,23 @@
-<!--The following is the downloaded HTML source of the localbooty.com privacy policy that was archived on 2016-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161209055910id_/http%3A//www.localbooty.com/site/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the localbooty.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606020622id_/http%3A//www.localbooty.com/site/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="Content-Language" content="EN">
 
 		
-		<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://d356b1acme9a2t.cloudfront.net/1479831276/public_html/themes/localbooty/js/app/production/js/xApp.js"></script>
-		<script type="text/javascript">XApp.loadGlobals({"userInfo":{"isGuest":true},"logPMVisitUrl":"\/site\/logPMVisit","pmData":{"campaignId":62109,"origin":"profile\/view\/id\/4013f7eeb05a33338ca2441aa46b7b67","identifier":"d4c094524d83665456506f3be89669d9","saveTime":1481263149},"pmIsRootTraffic":1,"gaEventUrl":"\/jsevent.html","gaEvents":{"registerStep1Success":"register_step_1_success","registerStep2Success":"register_step_2_success","registerStep3Success":"register_step_3_success"},"devMode":false,"logJsErrorUrl":"\/site\/logJsError","isMobile":false});</script>
+		<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://d356b1acme9a2t.cloudfront.net/1495814187/public_html/themes/localbooty/js/app/production/js/xApp.js"></script>
+		<script type="text/javascript">XApp.loadGlobals({"userInfo":{"isGuest":true},"logPMVisitUrl":"\/site\/logPMVisit","pmData":{"campaignId":62109,"origin":"site\/privacy","identifier":"e09ddb7519f6264c8795b32141c23145","saveTime":1496714782},"pmIsRootTraffic":1,"gaEventUrl":"\/jsevent.html","gaEvents":{"registerStep1Success":"register_step_1_success","registerStep2Success":"register_step_2_success","registerStep3Success":"register_step_3_success"},"devMode":false,"logJsErrorUrl":"\/site\/logJsError","isMobile":false});</script>
 		<script type="text/javascript">
-							require.baseUrl = 'https://d356b1acme9a2t.cloudfront.net/1479831276/public_html/themes/localbooty/js/app/production/js/lib';
+							require.baseUrl = 'https://d356b1acme9a2t.cloudfront.net/1495814187/public_html/themes/localbooty/js/app/production/js/lib';
 					</script>
 
-		<script src="https://d356b1acme9a2t.cloudfront.net/1479831276/public_html/themes/localbooty/js/app/production/js/lib/require.js" defer="true" data-main="app/site"></script>
+		<script src="https://d356b1acme9a2t.cloudfront.net/1495814187/public_html/themes/localbooty/js/app/production/js/lib/require.js" defer="true" data-main="app/site"></script>
 
 		
 					<title>Localbooty.com - Register now free for online dating and casual dates</title>
 		
-						<link href="https://d356b1acme9a2t.cloudfront.net/1479831276/public_html/themes/localbooty/css/production/style.css?1479831276" rel="stylesheet" type="text/css">
+						<link href="https://d356b1acme9a2t.cloudfront.net/1495814187/public_html/themes/localbooty/css/production/style.css?1495814187" rel="stylesheet" type="text/css">
 		<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -151,7 +151,7 @@ We may use third-party advertising companies to serve ads on our behalf. These c
 			<a href="http://www.localbooty.com/help">Help</a>
 		</li>
 	</ul>
-	<span class="copy">© 2016 Localbooty.com - Virtual Landscape Limited<br><span>Suite 102 Envoy House, La Vrangue, St Peter Port, Guernsey GY13EN <br>Virtual Landscape Limited LLC, 19C Trolley Sq, Wilmington, DE, 19806, USA</span></span>
+	<span class="copy">© 2017 Localbooty.com - Virtual Landscape Limited<br><span>Suite 102 Envoy House, La Vrangue, St Peter Port, Guernsey GY13EN <br>Virtual Landscape Limited LLC, 19C Trolley Sq, Wilmington, DE, 19806, USA</span></span>
 	<ul class="legalLinks">
 		<li class="privacy">
 			<a href="http://www.localbooty.com/site/privacy">Privacy Policy</a>
@@ -191,6 +191,6 @@ We may use third-party advertising companies to serve ads on our behalf. These c
 	</form>
 </div>
 					</div>
-	
+			
 
 </body></html>
