nozhit.com (archived on 2017-06-06)
{
  "alexa_rank": 63188,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 1771,
  "classifier_probability": 0.74,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.59,
  "homepage_snapshot_redirected_domain": "nozhit.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170430222816id_/http://www.nozhit.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170430222816id_/http%3A//nozhit.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "nozhit.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170606021104id_/http%3A//www.nozhit.com/faq.php%3Fpage_id%3Dpp%26lang%3Den",
  "policy_title": "Privacy Policy",
  "policy_url": "nozhit.com/faq.php?page_id=pp&lang=en",
  "sha1": "955cda76b7da8b91e6a13cd396d9f8676591a4c8",
  "simhash": 6089587746750413155,
  "simhash_updated": false,
  "site_hostname": "nozhit.com",
  "site_url": "http://nozhit.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170606021104",
  "word_count": 310,
  "year": 2017
}

--- a/n/no/noz/nozhit.com.html
+++ b/n/no/noz/nozhit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nozhit.com privacy policy that was archived on 2016-11-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161128011833id_/http%3A//www.nozhit.com/faq.php%3Fpage_id%3Dpp%26lang%3Den) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nozhit.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606021104id_/http%3A//www.nozhit.com/faq.php%3Fpage_id%3Dpp%26lang%3Den) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -54,7 +54,7 @@
 
 		
 	function upd_promo () {
-		/*
+		
 		$(".promo_mob_big").empty();
 		$(".promo_mob_big").html('<iframe src="/inc/promo/mob_big.php" width="320" height="480" marginwidth="0" marginheight="0" ALLOWTRANSPARENCY="true" frameborder="0" scrolling="no" hspace="0" vspace="0"></iframe>');
 
@@ -72,7 +72,7 @@
 
 		$(".promo_web_300x250").empty();
 		$(".promo_web_300x250").html('<iframe src="/inc/promo/web_300x250.php" width="300" height="250" marginwidth="0" marginheight="0" ALLOWTRANSPARENCY="true" frameborder="0" scrolling="no" hspace="0" vspace="0"></iframe>');
-		*/
+		
 			
 	}
 
@@ -198,7 +198,7 @@ Our website may contain links to enable you to visit other websites of interest 
 <iframe width="300" height="250" frameborder="no" framespacing="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="false" src="//ads.lfstmedia.com/slot/slot138014?section=slot138014&amp;ad_size=300x250&amp;adkey=04f"></iframe>
 <!-- End of Ad Call Tag -->
 
-</div></div><a href="/nz/this_christmas/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/this_christmas.jpg');"></div>What should you give your friends for christmas?</a><a href="/nz/naughty_or_nice/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/naughty_or_nice.jpg');"></div>Have you been naughty or nice?</a><a href="/nz/friends_know_you/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/friends_know_you.jpg');"></div>How well do your friends know you?</a><a href="/nz/medical_certificate/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/medical_certificate.jpg');"></div>What does your medical certificate look like?</a><a href="/nz/todays_newspaper/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/todays_newspaper.jpg');"></div>Today’s headlines about you</a><a href="/nz/ask_your_friends/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/ask_your_friends.jpg');"></div>Ask your friends</a><a href="/nz/name_in_snow/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/name_in_snow.jpg');"></div>Write your name in the snow</a><a href="/nz/jigsaw_puzzle/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/jigsaw_puzzle.jpg');"></div>What will your jigsaw puzzle look like?</a><div class="right_bar_items"><div class="promo_web_300x250">
+</div></div><a href="/nz/future_newspaper/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/future_newspaper.jpg');"></div>Headlines in the near future</a><a href="/nz/medical_certificate/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/medical_certificate.jpg');"></div>What does your medical certificate look like?</a><a href="/nz/todays_newspaper/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/todays_newspaper.jpg');"></div>Today’s headlines about you</a><a href="/nz/friends_know_you/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/friends_know_you.jpg');"></div>How well do your friends know you?</a><a href="/nz/great_news_about_you/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/great_news_about_you.jpg');"></div>Great news about you</a><a href="/nz/driving_test/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/driving_test.jpg');"></div>Can you pass the driving test?</a><a href="/nz/have_you_ever/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/have_you_ever.jpg');"></div>Have you ever...?</a><a href="/nz/baby_look_like_v2/en/" target="_top" class="right_bar_items"><div class="right_bar_image" style="background-image: url('/graphics/issues/main/baby_look_like_v2.jpg');"></div>What will your next baby look like?</a><div class="right_bar_items"><div class="promo_web_300x250">
 
 <!-- Begin Ad Call Tag - Do not Modify -->
 <iframe width="300" height="250" frameborder="no" framespacing="0" scrolling="no" marginheight="0" marginwidth="0" allowtransparency="false" src="//ads.lfstmedia.com/slot/slot138014?section=slot138014&amp;ad_size=300x250&amp;adkey=04f"></iframe>
@@ -277,7 +277,7 @@ Our website may contain links to enable you to visit other websites of interest 
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-10643087-55', {'sampleRate': 50});
+  ga('create', 'UA-10643087-55', 'auto');
   ga('send', 'pageview');
 
 </script>	
